--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
        <!--
           Course:  Web Application Development
           Assignment:  Lesson 4 (JavaScript 1)
-          Author:  
-          Date:   
+          Author:  Shawn Herron
+          Date:   02/15/2018
           Filename: index.html
        -->
        <meta charset="utf-8" />
@@ -48,6 +48,21 @@
                       <p><label for="foodInput">
                             Food (grocery, dining out, etc.):
                             <input type="text" id="foodInput" name="food" />
+                          </label>
+                      </p>
+                      <p><label for="householdInput">
+                            Household (decorations, toiletries, etc.):
+                            <input type="text" id="householdInput" name="household" />
+                          </label>
+                      </p>
+                      <p><label for="transportationInput">
+                            Transportation (gas, public transportation, etc.):
+                            <input type="text" id="transportationInput" name="transportation" />
+                          </label>
+                      </p>
+                      <p><label for="miscellaneousInput">
+                            Miscellaneous (unexpected expenses, etc.):
+                            <input type="text" id="miscellaneousInput" name="miscellaneous" />
                           </label>
                       </p>
 
